# bookworm

./: .gitignore  .gitmodules  .pre-commit-config.yaml  English1.epub  English2.epub  LICENSE  MANIFEST.in  Thumbs.db  alembic.ini  appveyor.yml  bkw.py  bookworm.stats  contributors.txt  crowdin.yml  invoke.yml  lab.py  oc.py  pyproject.toml  readme.md  requirements-app.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py  text.txt  update_info.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md  problem-report.md  problem_report.md
.github/workflows/: build.yml  publish-winget.yml
alembic/: env.py
alembic/versions/: 28099038d8d6_initial_migration.py  35f453946f1e_added_start_and_end_pos_to_note.py  52e39c4f7494_fix_annotation_position_offset.py  707543f03b6d_add_content_hash_column.py  85028f013e6d_zero_migration_revision.py  b743b2dbd3a1_add_text_model_version_columns.py
ar/LC_MESSAGES/: bookworm.po
bg/LC_MESSAGES/: bookworm.po
bookworm/: __init__.py  __main__.py  annotator.py  app.py  base_service.py  bookworm.py  bookworm.pyw  boot.py  bootstrap.py  commandline_handler.py  concurrency.py  continuous_reading.py  controller.py  decorators.py  document_uri.py  ebook_reader.py  gui.py  image_io.py  local_server.py  logger.py  ocr.py  ocr_provider.py  otau.py  pandoc.py  paths.py  reader.py  runtime.py  sentence_splitter.py  service_handler.py  shell.py  shell_integration.py  shellinfo.py  signals.py  sounds.py  speech.py  speech_engines.py  typehints.py  updater.py  user.py  utils.py  (+2 more)
bookworm/alembic/: env.py
bookworm/annotation/: __init__.py  annotation_dialogs.py  annotation_gui.py  annotation_models.py  annotator.py
bookworm/bookshelf/: __init__.py  commandline_app.py  database.py  interface.py  models.py  provider.py  tasks.py  viewer_integration.py  window.py
bookworm/concurrency/: __init__.py  asyncio_utils.py
bookworm/config/: __init__.py  spec.py
bookworm/database/: __init__.py  models.py  schema.py
bookworm/document/: __init__.py  base.py  cache_utils.py  elements.py  exceptions.py  features.py  hash_utils.py  operations.py  serde.py  uri.py
bookworm/document_formats/: __init__.py  _tools.py  base.py  doctools.py  elements.py  epub.py  epub_document.py  epub_document_alt.py  epub_document_lector_based.py  epub_fitz_base.py  exceptions.py  fitz_document.py  html_document.py  markdown_document.py  mobi_document.py  mu.py  mupdf.py  mupdf_base.py  mupdf_document.py  odf_document.py  pdf_document.py  plain_text.py  plain_text_document.py  powerpoint_presentation.py  tools.py  web_html_document.py  word_document.py
bookworm/documents/: __init__.py  epub.py  fitz.py  html.py  markdown.py  mobi.py  odf.py  pdf.py  plain_text.py  powerpoint.py  word.py
bookworm/epub_serve/: __init__.py  webapp.py
bookworm/extlibs/: winpaths.py
bookworm/gui/: __init__.py  browseable_message.py  caret_tracker.py  components.py  contentview_ctrl.py  preferences_dialog.py  settings.py  text_ctrl_mixin.py
bookworm/http_tools/: __init__.py  http_resource.py  json_resource.py
bookworm/i18n/: __init__.py  core.py  core.py.back  localeinfo.py  wx_i18n.py
bookworm/notes_exporter/: __init__.py  base_renderer.py  core_renderers.py
bookworm/ocr/: __init__.py  ocr_dialogs.py  ocr_gui.py  ocr_menu.py  ocr_provider.py  ocr_provider.pyold
bookworm/ocr_engines/: __init__.py  _shared.py  baidu_ocr.py  base.py  cv2_utils.py  glm_ocr.py  image_processing_pipelines.py  vivo_auth.py  vivo_ocr.py
bookworm/parallel/: __init__.py  document_operations.py
bookworm/platform_services/: __init__.py  ocr_provider.py  runtime.py  shell.py  speech_engines.py  updater.py  user.py
bookworm/qread/: __init__.py
bookworm/reader/: __init__.py  document_uri.py  tex_to_speech.py  text_to_speech.py
bookworm/readers/: __init__.py  base.py  epub.py  mu.py
bookworm/resources/: Tesseract.languages.txt  Wikipedia.languages.txt  app_icons.py  app_icons_data.py  image_data.py  images.py  lang_locales.py  sounds.py
bookworm/service/: __init__.py  base.py  handler.py
bookworm/services/: __init__.py  base.py  handler.py
bookworm/speech/: __init__.py  engine.py  enumerations.py  utterance.py
bookworm/speechdriver/: __init__.py  engine.py  enumerations.py  ssml_gen.py  utterance.py
bookworm/structured_text/: __init__.py  hyper_text_markup.py  primitives.py  string_builder.py  structural_elements.py  structure.py  structured_html_parser.py  symantic_element.py
bookworm/text_to_speech/: __init__.py  __init__.py.back  continuous_reading.py  tts_config.py  tts_gui.py
bookworm/utils/: __init__.py  general.py  string.py
bookworm/webservices/: __init__.py  url_open.py  wikiworm.py
docs/: .gitignore  README.md  _config.yml  bookworm.html  bookworm.md  bookworm_user_guide.md  branding.py  contentblocks.py  current_version.json  guide.md  index.html  jekyll-theme-tactile.gemspec  pelicanconf.py  publishconf.py  requirements.txt  tasks.py  update_info.json  user-guide.md
docs/_includes/: about.html  download.html  features.html  footer.html  head.html  header.html  js.html  nav.html
docs/_layouts/: default.html  homepage.html
docs/css/: freelancer.css  freelancer.min.css
docs/js/: version_provider.js
docs/plugins/: htmlcompress.py
docs/script/: cibuild
en/LC_MESSAGES/: bookworm.po
es-ES/LC_MESSAGES/: bookworm.po
fullsize_images/: Thumbs.db
hr/LC_MESSAGES/: bookworm.po
includes/BookwormUWPServices/: BookwormUWPServices.csproj  BookwormUWPServices.sln  OCRProvider.cs  README.md  (+1 more)
includes/bkw_rich_edit_opts/: Cargo.toml
includes/bkw_rich_edit_opts/src/: lib.rs
scripts/: bookworm.nsi  freeze.py  make_icons.py  py2exe_build.py
tests/: conftest.py  test_annotator.py  test_content_hash_backfill.py  test_document.py  test_document_uri.py  test_embedded_images.py  test_epub.py  test_fitz_with_epub.py  test_line_operations.py  test_otau.py  test_queue_process.py  test_reader.py  test_serde.py  test_toc_tree.py  test_utils.py  test_utterance.py  test_win32_update_paths.py
(+322 files in other folders)
