[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookworm"
description = "The universally accessible document reader"
readme = "readme.md"
requires-python = ">=3.11"
license = "GPL-2.0-only"
authors = [
    {name = "Blind Pandas Team", email = "info@blindpandas.org"}
]
keywords = [
    "reader", "document", "eBook", "accessibility", "a11y", "blind", "pdf", "epub", "tts"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Desktop Environment",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows :: Windows 8.1",
    "Operating System :: Microsoft :: Windows :: Windows 10 ",
    "Operating System :: Microsoft :: Windows :: Windows 11 ",
    "Operating System :: POSIX :: Linux ",
    "Programming Language :: Python :: 3.11",
    "Topic :: Adaptive Technologies",
    "Topic :: Desktop Environment :: Gnome",
    "Topic :: Education",
]
dynamic = ["version"]
dependencies = [
    "accessible-output2==0.17",
    "alembic==1.13.2",
    "apsw==3.46.0.0",
    "attrs==23.2.0",
    "Babel==2.15.0",
    "banal==1.0.6",
    "beautifulsoup4==4.12.3",
    "bidict==0.23.1",
    "blinker==1.8.2",
    "bottle==0.12.25",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "chardet==4.0.0",
    "charset-normalizer==3.4.2",
    "comtypes==1.4.2;sys_platform=='win32'",
    "configobj==5.0.9",
    "courlan==1.3.0",
    "cryptography==44.0.3",
    "cssselect==1.1.0",
    "dateparser==1.2.0",
    "defusedxml==0.7.1",
    "demandimport==0.3.4",
    "diskcache==5.4.0",
    "docrpy==0.3.0;sys_platform=='win32'",
    "EbookLib==0.20",
    "ftfy==6.2.0",
    "fuzzywuzzy==0.18.0",
    "greenlet==3.2.1",
    "htmldate==1.9.1",
    "idna==3.10",
    "inscriptis==2.5.0",
    "languagecodes==1.0.7",
    "libloader==0.21",
    "loguru==0.6.0",
    "lru-dict==1.1.8",
    "lxml==5.2.2",
    "lxml_html_clean==0.4.2",
    "Mako==1.3.10",
    "mammoth==1.11.0",
    "MarkupSafe==3.0.2",
    "mistune==0.8.4",
    "mobi==0.3.3",
    "more-itertools==10.2.0",
    "msgpack==1.0.8",
    "msoffcrypto-tool==5.0.0",
    "multidict==6.4.3",
    "neosynth==3.2.0;sys_platform=='win32'",
    "numpy==1.26.4",
    "odfpy==1.4.1",
    "olefile==0.47",
    "opencv-python-headless==4.8.1.78",
    "packaging>=24.2",
    "peewee==3.17.5",
    "Pillow==10.3.0",
    "platform-utils==1.5.1",
    "pydantic==2.4.0",
    "pydantic_core==2.10.0",
    "pymediawiki==0.7.4",
    "PyMuPDF==1.25.1",
    "pynput==1.8.1",
    "python-dateutil==2.8.2",
    "python-docx==1.1.2",
    "python-pptx==0.6.21",
    "pytz==2025.2",
    "pywhatlang==1.3.0",
    "pywin32==306;sys_platform=='win32'",
    "rapidfuzz==3.9.3",
    "regex==2024.5.15",
    "requests==2.32.4",
    "selectolax==0.3.21",
    "six==1.17.0",
    "soupsieve==2.7",
    "SQLAlchemy==2.0.41",
    "tld==0.13",
    "trafilatura==1.10.0",
    "typing_extensions==4.13.2",
    "tzdata==2025.2",
    "tzlocal==4.2",
    "ujson==5.10.0",
    "unicode-slugify==0.1.5",
    "Unidecode==1.4.0",
    "unrar==0.4",
    "url-normalize==1.4.3",
    "urllib3==2.6.3",
    "waitress==3.0.1",
    "wcwidth==0.2.13",
    "winpaths==0.2",
    "wxPython==4.2.1",
    "XlsxWriter==3.2.3",
    "yarl==1.9.4",
]

[project.gui-scripts]
bookworm = "bookworm.__main__:main"

[project.urls]
Homepage = "https://github.com/blindpandas/bookworm"

[tool.setuptools.packages.find]
exclude = ["tests"]

[dependency-groups]
dev = [
    "click==8.1.8",
    "distro==1.5.0;sys_platform=='linux'",
    "invoke>=2.2.0",
    "Jinja2==3.1.6",
    "pyinstaller==6.10.0",
    "pyinstaller-hooks-contrib==2024.8",
    "pytest==8.2.1",
    "pytest-github-actions-annotate-failures",
    "pytest-xdist==3.6.1",
    "wheel==0.43.0",
    "ruff>=0.4.0",
    "setuptools",
]

[tool.ruff]
line-length = 100
target-version = "py311"
builtins = ["_"] # Treat the translation functions as builtin so that they are not flagged
# ignore the generated COM interface 
exclude = [
    "bookworm/platforms/win32/speech_engines/sapi/COM_interfaces/_C866CA3A_32F7_11D2_9602_00C04F8EE628_0_5_4.py"
]

[tool.ruff.analyze]
detect-string-imports = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle error
    "F",    # pyflakes
    "W",    # pycodestyle warning
    "C90",  # mccabe
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetime
    "T10",  # flake8-debugger
    "EXE",  # flake8-executable
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "PERF", # perflint
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
    "SIM108", # if-else-block-instead-of-if-exp
    # ignore it because there are some sqlalchemy queries that check equality to None
    "E711",
    # Ignore it because there are some queries we build with sqlalchemy
    # Which will use equality to True in their conditions
    "E712",
]

[tool.ruff.lint.flake8-gettext]
function-names = ["_", "gettext", "ngettext", "ugettext"]

[tool.ruff.lint.isort]
known-first-party = ["bookworm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n 3 -q --disable-warnings"

[tool.bookworm.local-dependencies]
# Dependencies located in packages/
shared = [
    "pyxpdf_data-1.1.0-py3-none-any.whl"
]

[tool.bookworm.local-dependencies.win32]
# Architecture-specific dependencies in packages/win32/{arch}/
packages = [
    "pyper-*.whl",
    "pyxpdf-*.whl",
    "pytqsm-*.whl"
]